--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -3,11 +3,27 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
+    <div class="ml-2">
+      <img src="images/logos/escudo.png" class="w-12" />
+    </div>
     <span class="flex-1"></span>
-    <button mat-icon-button routerLink="/home/resources">
-      <mat-icon>open_in_new</mat-icon>
-    </button>
-    <div class="relative ml-2">
+    <div class="flex gap-x-2">
+      <button
+        mat-icon-button
+        matTooltip="Comunicados"
+        routerLink="/home/resources"
+      >
+        <mat-icon>campaign</mat-icon>
+      </button>
+      <button
+        mat-icon-button
+        matTooltip="Recursos"
+        routerLink="/home/resources"
+      >
+        <mat-icon>apps</mat-icon>
+      </button>
+    </div>
+    <div class="relative ml-4">
       <button
         mat-icon-button
         cdkOverlayOrigin
