--- a/src/app/layout/presentation/pages/home/home.component.html
+++ b/src/app/layout/presentation/pages/home/home.component.html
@@ -3,7 +3,7 @@
     <button mat-icon-button (click)="snav.toggle()">
       <mat-icon>menu</mat-icon>
     </button>
-    <div class="ml-2">
+    <div>
       <img src="images/logos/escudo.png" class="w-12" />
     </div>
     <span class="flex-1"></span>
