--- a/src/app/resources/presentation/pages/resources/resources.component.html
+++ b/src/app/resources/presentation/pages/resources/resources.component.html
@@ -14,7 +14,9 @@
   </button>
 </mat-toolbar>
 <div class="mx-auto max-w-4xl py-4 px-2">
-  <div class="flex flex-col sm:flex-row items-center sm:justify-between mb-4 gap-2">
+  <div
+    class="flex flex-col sm:flex-row items-center sm:justify-between mb-6 gap-2"
+  >
     <div class="flex gap-2">
       <button mat-stroked-button (click)="accordion().openAll()">
         <mat-icon>keyboard_arrow_down</mat-icon>
@@ -33,59 +35,57 @@
     </div>
   </div>
   <mat-accordion multi>
-    @if (isLoading()) { 
-      <p>Cargado</p>
-    } @else {
-       @for (item of filteredGroupedResources();  track item; let i = $index) {
-        <mat-expansion-panel>
-          <mat-expansion-panel-header>
-            <div class="flex items-center gap-x-4">
-              <img src="images/icons/folder.png" alt="folder" class="size-6" />
-              <span class="font-medium">{{ item.category }}</span>
+    @if (isLoading()) {
+    <p>Cargado</p>
+    } @else { @for (item of filteredGroupedResources(); track item; let i =
+    $index) {
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <div class="flex items-center gap-x-4">
+          <img src="images/icons/folder.png" alt="folder" class="size-6" />
+          <span class="font-medium">{{ item.category }}</span>
+        </div>
+      </mat-expansion-panel-header>
+      <div>
+        <ul class="divide-y divide-gray-400">
+          @for (file of item.files; track $index) {
+          <li class="flex items-center justify-between p-2 hover:bg-gray-100">
+            <div class="flex items-center space-x-4">
+              <img class="size-5" [src]="file.fileName | fileIcon" />
+              <div>
+                <p class="font-medium">
+                  {{ file.originalName }}
+                </p>
+                <p class="text-xs">
+                  Creacion: {{ file.createdAt | date : "dd/MM/yyyy" }}
+                </p>
+              </div>
             </div>
-          </mat-expansion-panel-header>
-          <div>
-            <ul class="divide-y divide-gray-400">
-              @for (file of item.files; track $index) {
-              <li class="flex items-center justify-between p-2 hover:bg-gray-100">
-                <div class="flex items-center space-x-4">
-                  <img class="size-5" [src]="file.fileName | fileIcon" />
-                  <div>
-                    <p class="font-medium">
-                      {{ file.originalName }}
-                    </p>
-                    <p class="text-xs">
-                      Creacion: {{ file.createdAt | date : "dd/MM/yyyy" }}
-                    </p>
-                  </div>
-                </div>
-                <div class="flex gap-x-2">
-                  <button mat-icon-button (click)="download(file)">
-                    <mat-icon>download</mat-icon>
-                  </button>
-                  <ng-container>
-                    <button
-                      mat-icon-button
-                      *hasPermission="{
-                        resource: PERMISSION.resources,
-                        actions: ['delete']
-                      }"
-                      (click)="remove(file)"
-                    >
-                      <mat-icon>close</mat-icon>
-                    </button>
-                  </ng-container>
-                </div>
-              </li>
-              }
-            </ul>
-          </div>
-        </mat-expansion-panel>
+            <div class="flex gap-x-2">
+              <button mat-icon-button (click)="download(file)">
+                <mat-icon>download</mat-icon>
+              </button>
+              <ng-container>
+                <button
+                  mat-icon-button
+                  *hasPermission="{
+                    resource: PERMISSION.resources,
+                    actions: ['delete']
+                  }"
+                  (click)="remove(file)"
+                >
+                  <mat-icon>close</mat-icon>
+                </button>
+              </ng-container>
+            </div>
+          </li>
+          }
+        </ul>
+      </div>
+    </mat-expansion-panel>
 
-      } 
-      @empty {
-        <p class="text-xl p-4">Sin elementos</p>
-      } 
-    }
+    } @empty {
+    <p class="text-xl p-4">Sin elementos</p>
+    } }
   </mat-accordion>
 </div>
