correcion seleccion de archivos

--- a/src/app/publications/presentation/pages/manage-publications/create-post/create-post.component.html
+++ b/src/app/publications/presentation/pages/manage-publications/create-post/create-post.component.html
@@ -1,41 +1,6 @@
 <h2 mat-dialog-title>Crear Publicacion</h2>
 <mat-dialog-content>
-  <div
-    class="relative flex w-full flex-col overflow-hidden rounded-xl bg-white bg-clip-border text-gray-700 shadow-md"
-  >
-    <div
-      class="relative m-0 overflow-hidden text-gray-700 bg-transparent rounded-none shadow-none bg-clip-border"
-    >
-      @if (image()) {
-      <img
-        src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?ixlib=rb-4.0.3&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1471&amp;q=80"
-        alt="ui/ux review check"
-      />
-      }
-    </div>
-    <!-- <div class="p-6">
-        <h4 class="block font-sans text-2xl antialiased font-semibold leading-snug tracking-normal text-blue-gray-900">
-            UI/UX Review Check
-        </h4>
-        <p class="block mt-3 font-sans text-xl antialiased font-normal leading-relaxed text-gray-700">
-            Because it&apos;s about motivating the doers. Because I&apos;m here to follow my dreams and inspire others.
-        </p>
-    </div>
-    <div class="flex items-center justify-between p-6">
-        <div class="flex items-center -space-x-3">
-            <img alt="natali craig"
-                src="https://images.unsplash.com/photo-1580489944761-15a19d654956?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1061&amp;q=80"
-                class="relative inline-block h-9 w-9 rounded-full border-2 border-white object-cover object-center hover:z-10" />
-            <img alt="Tania Andrew"
-                src="https://images.unsplash.com/photo-1633332755192-727a05c4013d?ixlib=rb-1.2.1&amp;ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&amp;auto=format&amp;fit=crop&amp;w=1480&amp;q=80"
-                class="relative inline-block h-9 w-9 rounded-full border-2 border-white object-cover object-center hover:z-10" />
-        </div>
-        <p class="block font-sans text-base antialiased font-normal leading-relaxed text-inherit">
-            January 10
-        </p>
-    </div> -->
-  </div>
-  <form [formGroup]="form">
+  <form [formGroup]="form" class="py-2">
     <div class="grid grid-cols-2 gap-x-2">
       <div class="col-span-2 border-1">
         <mat-form-field class="min-w-full">
@@ -51,18 +16,24 @@
       </div>
       <div>
         <mat-form-field>
-          <mat-label>Expiracion</mat-label>
-          <input
-            matInput
-            [matDatepicker]="picker"
-            [min]="minDate"
-            formControlName="expirationDate"
-          />
+          <mat-label>Mostrar en rango</mat-label>
+          <mat-date-range-input [rangePicker]="picker" [min]="null">
+            <input
+              matStartDate
+              formControlName="startDate"
+              placeholder="Desde"
+            />
+            <input
+              matEndDate
+              formControlName="expirationDate"
+              placeholder="Hasta"
+            />
+          </mat-date-range-input>
           <mat-datepicker-toggle
             matIconSuffix
             [for]="picker"
           ></mat-datepicker-toggle>
-          <mat-datepicker #picker></mat-datepicker>
+          <mat-date-range-picker #picker></mat-date-range-picker>
         </mat-form-field>
       </div>
       <div>
@@ -78,40 +49,17 @@
         </mat-form-field>
       </div>
     </div>
-
-    <div class="flex justify-between items-center p-2">
-      <span>Archivos:</span>
-      <button mat-mini-fab aria-label="Attach file" (click)="fileInput.click()">
-        <mat-icon>attach_file</mat-icon>
-      </button>
-      <input
-        #fileInput
-        [hidden]="true"
-        type="file"
-        [multiple]="true"
-        (change)="addFile($event)"
-      />
-    </div>
-    <div></div>
-    <div class="col-span-2">
-      <mat-list class="overflow-y-auto max-h-52 w-full rounded-lg border-2">
-        @for (file of files(); track $index) {
-        <mat-list-item>
-          <mat-icon matListItemIcon>description</mat-icon>
-          <div matListItemTitle>{{ file.name }}</div>
-          <div matListItemLine>
-            {{ (file.size / 1024 / 1024).toFixed(2) }} MB
-          </div>
-          <button mat-icon-button (click)="removeFile($index)" matListItemMeta>
-            <mat-icon>delete</mat-icon>
-          </button>
-        </mat-list-item>
-        } @empty {
-        <span class="px-3">Sin archivos adjuntos</span>
-        }
-      </mat-list>
-    </div>
   </form>
+  <div>
+    <secure-image-uploader />
+  </div>
+  <div>
+    <file-upload />
+    <!-- <file-upload
+      [(files)]="attachmentsFiles"
+      [(attachments)]="uploaded().attachments"
+    /> -->
+  </div>
 </mat-dialog-content>
 <mat-dialog-actions align="end">
   <button mat-button mat-dialog-close>Cancelar</button>
