--- a/src/app/publications/presentation/pages/manage-publications/manage-publications.component.html
+++ b/src/app/publications/presentation/pages/manage-publications/manage-publications.component.html
@@ -1,11 +1,11 @@
 <mat-toolbar>
-  <span>Administrar Publicaciones</span>
-  <span class="flex-auto"></span>
+  <span>Publicaciones</span>
+  <span class="flex-1"></span>
   <button mat-icon-button aria-label="Create post" (click)="create()">
     <mat-icon>add</mat-icon>
   </button>
 </mat-toolbar>
-
+<!-- 
 <div class="p-3">
   <table mat-table [dataSource]="datasource()" class="mat-elevation-z8">
     <ng-container matColumnDef="title">
@@ -53,4 +53,66 @@
       <td class="p-3" colspan="3">Sin resultados</td>
     </tr>
   </table>
+</div> -->
+
+<!-- <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+  <mat-card *ngFor="let pub of datasource()">
+    <img mat-card-image [src]="'images/avatar.png'" alt="Imagen publicación" />
+    <mat-card-title>{{ pub.title }}</mat-card-title>
+    <mat-card-subtitle>{{ pub.createdAt | date : "short" }}</mat-card-subtitle>
+  </mat-card>
+</div> -->
+<!-- 
+<div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4 p-4">
+  <mat-card *ngFor="let publication of datasource()" class="shadow-lg">
+    <img
+      mat-card-image
+      [src]="'images/avatar.png'"
+      alt="{{ publication.title }}"
+      class="object-cover h-48 w-full"
+    />
+    <mat-card-header>
+      <mat-card-title>{{ publication.title }}</mat-card-title>
+      <mat-card-subtitle>{{
+        publication.createdAt | date : "shortDate"
+      }}</mat-card-subtitle>
+    </mat-card-header>
+  </mat-card>
+</div> -->
+
+<div class="p-2">
+  <div class="space-y-2">
+    @for (item of datasource(); track $index) {
+
+    <div
+      class="flex items-center gap-4 p-4 border border-gray-200 rounded-md hover:bg-gray-50"
+    >
+      <img [src]="'images/avatar.png'" class="w-16 h-16 object-cover rounded" />
+
+      <div class="flex-1">
+        <h3 class="font-semibold text-gray-800">Titulo</h3>
+        <p class="text-sm text-gray-500">Fecha</p>
+      </div>
+
+      <div class="flex gap-2">
+        <button mat-icon-button color="primary">
+          <mat-icon>edit</mat-icon>
+        </button>
+        <button mat-icon-button color="warn">
+          <mat-icon>delete</mat-icon>
+        </button>
+      </div>
+    </div>
+
+    }
+  </div>
 </div>
+
+<!-- 
+<mat-paginator
+  [length]="totalPublications"
+  [pageSize]="pageSize"
+  [pageSizeOptions]="[5, 10, 20]"
+  (page)="onPageChange($event)"
+>
+</mat-paginator> -->
