--- a/src/app/publications/presentation/pages/manage-publications/manage-publications.component.html
+++ b/src/app/publications/presentation/pages/manage-publications/manage-publications.component.html
@@ -95,7 +95,7 @@
       </div>
 
       <div class="flex gap-2">
-        <button mat-icon-button color="primary">
+        <button mat-icon-button color="primary" (click)="update(item)">
           <mat-icon>edit</mat-icon>
         </button>
         <button mat-icon-button color="warn">
