--- a/src/app/reports/presentation/layouts/report-dashboard/report-dashboard.component.html
+++ b/src/app/reports/presentation/layouts/report-dashboard/report-dashboard.component.html
@@ -1,7 +1,12 @@
 <mat-toolbar>
   <span>Reportes</span>
   <span class="flex-1"></span>
-  <button mat-mini-fab aria-label="Menu reports" (click)="openBottomSheet()">
+  <button
+    mat-mini-fab
+    aria-label="Menu reports"
+    (click)="openBottomSheet()"
+    matTooltip="Ver reportes"
+  >
     <mat-icon>menu</mat-icon>
   </button>
 </mat-toolbar>
