--- a/src/app/reports/presentation/pages/report-dependents/report-dependents.component.html
+++ b/src/app/reports/presentation/pages/report-dependents/report-dependents.component.html
@@ -1,51 +1,100 @@
-<div class="container">
-  <table cdk-table [dataSource]="dataSource()">
-    <ng-container cdkColumnDef="officer">
-      <th cdk-header-cell *cdkHeaderCellDef>Funcionario</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        @if(element.officer){
-        <span class="d-block"> {{ element.officer.fullname | titlecase }}</span>
-        <span class="d-block">{{
-          element.officer.jobtitle ?? "Sin cargo"
-        }}</span>
+<div class="p-2 sm:p-4">
+  <div class="flex flex-col gap-y-6">
+    <mat-accordion>
+      <mat-expansion-panel expanded="true">
+        <mat-expansion-panel-header>
+          <mat-panel-title>PROPIEDADES SOLICITANTE </mat-panel-title>
+        </mat-expansion-panel-header>
+        <form [formGroup]="form" class="mt-2">
+          <div class="flex gap-2 items-center">
+            <div class="w-1/3">
+              <mat-form-field>
+                <mat-label>Ingrese un rango</mat-label>
+                <mat-date-range-input [rangePicker]="picker">
+                  <input
+                    matStartDate
+                    placeholder="Fecha inicio"
+                    formControlName="startDate"
+                  />
+                  <input
+                    matEndDate
+                    placeholder="Fecha fin"
+                    formControlName="endDate"
+                  />
+                </mat-date-range-input>
+                <mat-datepicker-toggle
+                  matIconSuffix
+                  [for]="picker"
+                ></mat-datepicker-toggle>
+                <mat-date-range-picker #picker></mat-date-range-picker>
+              </mat-form-field>
+            </div>
+            <div class="w-1/3">
+              <mat-form-field>
+                <mat-label>Tipo de correspondencia:</mat-label>
+                <mat-select formControlName="participant">
+                  @for (item of participants; track $index) {
+                  <mat-option [value]="item.value">{{ item.label }}</mat-option>
+                  }
+                </mat-select>
+              </mat-form-field>
+            </div>
+            <div class="w-1/3">
+              <mat-form-field>
+                <mat-label>Grupo tramite:</mat-label>
+                <mat-select formControlName="group">
+                  @for (item of procedureGroups; track $index) {
+                  <mat-option [value]="item.value">{{ item.label }}</mat-option>
+                  }
+                </mat-select>
+              </mat-form-field>
+            </div>
+          </div>
+        </form>
+        <mat-action-row>
+          <button mat-icon-button (click)="print()">
+            <mat-icon>print</mat-icon>
+          </button>
+          <button mat-button (click)="clear()">Limpiar</button>
+          <button mat-button (click)="generate()">Buscar</button>
+        </mat-action-row>
+      </mat-expansion-panel>
+    </mat-accordion>
+    <p class="text-xl tracking-wide">Resultados</p>
+    <div>
+      <table mat-table [dataSource]="dataSource()">
+        <ng-container matColumnDef="officer">
+          <th mat-header-cell *matHeaderCellDef>Usuario</th>
+          <td mat-cell *matCellDef="let element">
+            <div class="block font-medium text-base">
+              @if(element.officer){
+                {{ element.officer | titlecase }}
+              }
+              @else {
+                <span class="text-red-600">Sin asignar</span>
+              }
+            </div>
+            <div class="block text-xs">{{ element.jobTitle }}</div>
+          </td>
+        </ng-container>
 
-        } @else {
-        <span class="text-danger">DESVINCULADO</span>
+        @for (column of columnsToDisplay; track $index) {
+        <ng-container [matColumnDef]="column.columnDef">
+          <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+          <td mat-cell *matCellDef="let element" class="w-32">
+            {{ element[column.columnDef] }}
+          </td>
+        </ng-container>
         }
-      </td>
-    </ng-container>
-    <ng-container cdkColumnDef="pending">
-      <th cdk-header-cell *cdkHeaderCellDef>Sin recibir</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        {{ element.details.pending }}
-      </td>
-    </ng-container>
-    <ng-container cdkColumnDef="received">
-      <th cdk-header-cell *cdkHeaderCellDef>Recibidos</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        {{ element.details.received }}
-      </td>
-    </ng-container>
-    <ng-container cdkColumnDef="rejected">
-      <th cdk-header-cell *cdkHeaderCellDef>Rechazados</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        {{ element.details.rejected }}
-      </td>
-    </ng-container>
-    <ng-container cdkColumnDef="archived">
-      <th cdk-header-cell *cdkHeaderCellDef>Archivados</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        {{ element.details.archived }}
-      </td>
-    </ng-container>
-    <ng-container cdkColumnDef="completed">
-      <th cdk-header-cell *cdkHeaderCellDef>Enviados</th>
-      <td cdk-cell *cdkCellDef="let element" class="py-2">
-        {{ element.details.completed }}
-      </td>
-    </ng-container>
 
-    <tr cdk-header-row *cdkHeaderRowDef="displayedColumns"></tr>
-    <tr cdk-row *cdkRowDef="let row; columns: displayedColumns"></tr>
-  </table>
+        <ng-container matColumnDef="total">
+          <th mat-header-cell *matHeaderCellDef>Total</th>
+          <td mat-cell *matCellDef="let element">{{ element.total }}</td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      </table>
+    </div>
+  </div>
 </div>
