--- a/src/app/communications/presentation/components/procurement-communication/procurement-communication.component.html
+++ b/src/app/communications/presentation/components/procurement-communication/procurement-communication.component.html
@@ -187,12 +187,12 @@
         </div>
       </form>
       @if(isAlertShowing()){
-      <alert-message
+      <!-- <alert-message
         [life]="3000"
         severity="success"
         title="Cambios guardados"
         (close)="isAlertShowing.set(false)"
-      />
+      /> -->
       }
 
       <mat-action-row>
