--- a/src/app/layout/presentation/pages/settings/settings.component.html
+++ b/src/app/layout/presentation/pages/settings/settings.component.html
@@ -83,14 +83,14 @@
         </form>
       </div>
       @if(isAlertShowing()){
-      <div class="py-4">
+      <!-- <div class="py-4">
         <alert-message
           severity="success"
           title="Cambios guardados"
           [life]="3000"
           (close)="isAlertShowing.set(false)"
         />
-      </div>
+      </div> -->
       }
       <button
         mat-flat-button
