--- a/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
+++ b/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
@@ -125,11 +125,11 @@
         (page)="onPageChange($event)"
       />
       } } @if(!isLoading() && hasSearched() && datasource().length === 0){
-      <alert-message
+      <!-- <alert-message
         title="Sin resultados"
         message="Revise los parametros ingresados"
         severity="warning"
-      />
+      /> -->
       }
     </div>
   </div>
