--- a/src/app/reports/presentation/pages/report-dependents/report-dependents.component.html
+++ b/src/app/reports/presentation/pages/report-dependents/report-dependents.component.html
@@ -3,7 +3,7 @@
     <mat-accordion>
       <mat-expansion-panel expanded="true">
         <mat-expansion-panel-header>
-          <mat-panel-title>PROPIEDADES SOLICITANTE </mat-panel-title>
+          <mat-panel-title>PARAMENTROS BUSQUEDA </mat-panel-title>
         </mat-expansion-panel-header>
         <form [formGroup]="form" class="mt-2">
           <div class="flex gap-2 items-center">
@@ -31,7 +31,7 @@
             </div>
             <div class="w-1/3">
               <mat-form-field>
-                <mat-label>Tipo de correspondencia:</mat-label>
+                <mat-label>Tipo de correspondencia</mat-label>
                 <mat-select formControlName="participant">
                   @for (item of participants; track $index) {
                   <mat-option [value]="item.value">{{ item.label }}</mat-option>
@@ -41,7 +41,7 @@
             </div>
             <div class="w-1/3">
               <mat-form-field>
-                <mat-label>Grupo tramite:</mat-label>
+                <mat-label>Grupo tramite</mat-label>
                 <mat-select formControlName="group">
                   @for (item of procedureGroups; track $index) {
                   <mat-option [value]="item.value">{{ item.label }}</mat-option>
@@ -56,45 +56,72 @@
             <mat-icon>print</mat-icon>
           </button>
           <button mat-button (click)="clear()">Limpiar</button>
-          <button mat-button (click)="generate()">Buscar</button>
+          <button
+            mat-button
+            [disabled]="isLoading() || form.invalid"
+            (click)="generate()"
+          >
+            Buscar
+          </button>
         </mat-action-row>
       </mat-expansion-panel>
     </mat-accordion>
+
     <p class="text-xl tracking-wide">Resultados</p>
-    <div>
-      <table mat-table [dataSource]="dataSource()">
-        <ng-container matColumnDef="officer">
-          <th mat-header-cell *matHeaderCellDef>Usuario</th>
-          <td mat-cell *matCellDef="let element">
-            <div class="block font-medium text-base">
-              @if(element.officer){
-                {{ element.officer | titlecase }}
-              }
-              @else {
-                <span class="text-red-600">Sin asignar</span>
-              }
-            </div>
-            <div class="block text-xs">{{ element.jobTitle }}</div>
-          </td>
-        </ng-container>
 
-        @for (column of columnsToDisplay; track $index) {
-        <ng-container [matColumnDef]="column.columnDef">
-          <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
-          <td mat-cell *matCellDef="let element" class="w-32">
-            {{ element[column.columnDef] }}
-          </td>
-        </ng-container>
-        }
-
-        <ng-container matColumnDef="total">
-          <th mat-header-cell *matHeaderCellDef>Total</th>
-          <td mat-cell *matCellDef="let element">{{ element.total }}</td>
-        </ng-container>
-
-        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
-      </table>
+    @if(isLoading()){
+    <div class="px-6 py-2">
+      <mat-progress-bar mode="indeterminate" />
     </div>
+    } 
+
+    @if(!isLoading() && hasSearched() && dataSource().length === 0){
+    <alert-message
+      severity="warning"
+      title="Sin resultados"
+      message="Revise los paremetros ingresados"
+    />
+    }
+
+    @if(!isLoading() && !hasSearched()){
+      <div class="p-3 rounded-md"  style="background-color: var(--mat-sys-surface-container-high);">
+        💡<span class="ml-2 text-base leading-6">Seleccione el rango y el tipo de correspondencia</span>
+      </div>
+    }
+
+    @if(!isLoading() && dataSource().length > 0){
+    <table mat-table [dataSource]="dataSource()">
+      <ng-container matColumnDef="officer">
+        <th mat-header-cell *matHeaderCellDef>Usuario</th>
+        <td mat-cell *matCellDef="let element">
+          <div class="block font-medium text-base">
+            @if(element.officer){
+            {{ element.officer | titlecase }}
+            } @else {
+            <span class="text-red-600">Sin asignar</span>
+            }
+          </div>
+          <div class="block text-xs">{{ element.jobTitle }}</div>
+        </td>
+      </ng-container>
+
+      @for (column of columnsToDisplay; track $index) {
+      <ng-container [matColumnDef]="column.columnDef">
+        <th mat-header-cell *matHeaderCellDef>{{ column.header }}</th>
+        <td mat-cell *matCellDef="let element" class="w-32">
+          {{ element[column.columnDef] }}
+        </td>
+      </ng-container>
+      }
+
+      <ng-container matColumnDef="total">
+        <th mat-header-cell *matHeaderCellDef>Total</th>
+        <td mat-cell *matCellDef="let element">{{ element.total }}</td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    </table>
+    }
   </div>
 </div>
