--- a/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
+++ b/src/app/reports/presentation/pages/report-applicant/report-applicant.component.html
@@ -114,7 +114,7 @@
         "Ingrese alguno de los campos para realizar la busqueda"
       </div>
       } @if(!isLoading() && hasSearched() && datasource().length > 0){
-      <report-procedure-table [datasource]="datasource()" [columns]="COLUMNS" />
+      <report-procedure-table [data]="datasource()" [columns]="COLUMNS" />
       @if (limit() < datasize()){
       <mat-paginator
         showFirstLastButtons
